--- a/src/containers/GameForm/GameForm.css
+++ b/src/containers/GameForm/GameForm.css
@@ -3,24 +3,25 @@
 ************************************/
 
 /* colors used:
-  #fdfdff
-  #ddd
-  #02558b
-  #2cf
-  #ff533d
+  #fdfdff   or var(--white)
+  #ddd      or var(--gray)
+  #02558b   or var(--primary-color)
+  #2cf      or var(--secondary-color)
+  #ff533d   or var(--action-color)
 */
 
 .gameForm {
-  background-image: url('../../images/gplaypattern.png');
+  /* background-image: url('../../images/gplaypattern.png'); */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   min-height: 100vh;
-  padding: 6rem 1rem 1rem;
+  /* padding: 6rem 1rem 1rem; */
   overflow: scroll;
+  overflow-x: hidden;
 }
 
-.filedset {
+.fieldset {
   padding-top: 1rem;
   height: 2rem;
 }
@@ -38,11 +39,21 @@ legend {
 
 label {
   color: #ff533d;
+  align-self: flex-start;
+}
+
+label.form-check-label {
+  padding: 0;
+}
+
+input.form-check-input {
+  opacity: 0;
 }
 
 .radio_buttons_cat {
   display: flex;
   justify-content: space-between;
+  flex-flow: row wrap;
   margin: 0rem auto;
   width: 95%;
 }
@@ -55,8 +66,23 @@ label input {
   font-size: 1.25rem;
 }
 
+.form-check-label i {
+  color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  font-size: 40px;
+  border-radius: 50%;
+  width: 25%;
+  padding: 0.75rem 2rem;
+  margin: 0 auto 0.5rem;
+  box-shadow: 3px 3px 15px rgba(0,0,0,0.3);
+  transition: background-color 0.4s, transform 0.4s;
+}
+
 textarea, textarea:before, textarea:after {
-  height: 9rem;
+  height: 10rem;
   -webkit-user-select: initial;
   -khtml-user-select: initial;
   -moz-user-select: initial;
@@ -72,7 +98,9 @@ textarea, textarea:before, textarea:after {
 }
 
 .gameForm button {
-  background-color: #ff533d;
+  background-color: var(--action-color);
+  box-shadow: 3px 5px 15px rgba(0,0,0,0.3);
+  border-radius: 20px;
   color: white;
   margin: 0.5rem auto;
   width: 40%;
@@ -80,6 +108,43 @@ textarea, textarea:before, textarea:after {
 
 .another_game_link {
   color: #2cf;
+}
+
+.nav-tabs {
+  display: flex;
+  justify-content: center;
+  width: 300vw;
+  transition: transform 0.4s;
+}
+
+.tabs {
+  width: 100vw;
+  height: 85vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  padding: 6rem 1rem 1rem;
+}
+
+.tab-arrows {
+  padding: 0rem 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.tab-arrows div i {
+  background-color: var(--action-color);
+  border-radius: 50%;
+  box-shadow: 3px 3px 15px rgba(0,0,0,0.4);
+  color: var(--white);
+  font-size: 36px;
+  padding: 0.35rem;
+  margin: 0;
+}
+
+#tab2 input, #tab2 input::placeholder {
+  border-radius: 0px;
+  text-align: center;
+  font-size: 24px;
 }
 
 @media screen and (min-width: 800px) {
@@ -94,7 +159,7 @@ textarea, textarea:before, textarea:after {
   }
 
   .players-input {
-  width: 51%;
+    width: 51%;
   }
 
 }
